[workspace]
resolver = "2"
members = [
    "ssh-auth-cmd",
    "ssh-auth-config", 
    "ssh-auth-common"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
nix = { version = "0.27", features = ["user"] }
ssh-auth-common = { path = "ssh-auth-common" }