[package]
name = "ssh-auth-cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SSH AuthorizedKeysCommand multiplexer - chain multiple SSH authentication sources"
readme = "../README.md"

[[bin]]
name = "ssh-auth-cmd"
path = "src/main.rs"

[dependencies]
ssh-auth-common.workspace = true
clap.workspace = true
nix.workspace = true
serde.workspace = true
toml.workspace = true