[package]
name = "ssh-auth-common"
version = "0.1.0"
edition = "2021"
description = "Common types and utilities for ssh-auth-cmd suite"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nix = { version = "0.27", features = ["user"] }
clap = { version = "4.0", features = ["derive"] }