[package]
name = "ssh-auth-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common types and utilities for ssh-auth-cmd suite"
readme = "../README.md"

[dependencies]
serde.workspace = true
toml.workspace = true
nix.workspace = true
clap.workspace = true