[package]
name = "ssh-auth-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SSH AuthorizedKeysCommand multiplexer - configuration management utilities"
readme = "../README.md"

[[bin]]
name = "ssh-auth-config"
path = "src/main.rs"

[dependencies]
ssh-auth-common.workspace = true
clap.workspace = true
toml.workspace = true
nix.workspace = true